--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       allowfullscreen
       allow="xr-spatial-tracking; gyroscope; accelerometer"
       scrolling="no"
-      src="https://kuula.co/share/collection/7ks18?logo=-1&info=0&fs=0&vr=0&zoom=1&thumbs=-1&alpha=0.60&inst=0"
+      src="https://kuula.co/share/collection/7ks18?logo=1&info=1&fs=0&vr=0&zoom=1&autorotate=0.77&autopalt=1&thumbs=-1&alpha=0.60&inst=0"
     ></iframe>
   </body>
 </html>
